--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ style="margin:0 15px; font-size:24px; color:#fff; transition:0.3s;">
 
 <!-- CONTACT -->
 <section id="contact" class="contact">
-<h2 class="section-title">Get In Touch</h2>
+<h2 class="section-title">Let work together</h2>
 
 <form action="https://formsubmit.co/jagjodhnarula@gmail.com" method="POST">
 <input type="text" name="name" placeholder="Your Name" required>
@@ -378,4 +378,5 @@ style="margin:0 15px; font-size:24px; color:#fff; transition:0.3s;">
 
 </body>
 </html>
+
 
